Added documentation and trying java server and docker-compose up
asd